# 8080-Emulator

./: .gitignore  CMakeLists.txt  tests_order.txt
resources/: test.asm
source/: i8080.c  i8080.h  instructions.c  instructions.h  main.c  utils.c  utils.h
